--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,36 @@
-.p {
-    color: #434455
+.studio-link {
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        color: #2E2F42;
 }
-.h2 {
-    color: #2E2F42
+.portfolio-link {
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;    
+        letter-spacing: 0.02em;   
+        color: #2E2F42;
 }
-.header {
-    color: #2E2F42
+.contact-link {
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;    
+        letter-spacing: 0.02em;            
+        color: #2E2F42;
 }
-.header :hover {
-    color: blue;
+.menu {
+    position: absolute;
+        width: 261px;
+        height: 24px;
+        left: 347px;
+        top: 24px;
 }
+
+
